# agent-translate

./: main.py  pyproject.toml
src/: __init__.py  main.py
src/api/: __init__.py  main.py  models.py  router.py  translation_api.py
src/api/core/: config.py  dependencies.py
src/api/v1/: __init__.py
src/core/: __init__.py  agent.py  agent_config.py  chatbot.py  dictionary_manager.py  llm_manager.py  react_agent.py  translation_engine.py
src/core/tools/: base.py  docx_tools.py  excel_tools.py  pptx_tools.py
src/engines/: __init__.py  anthropic_engine.py  azure_engine.py  base.py  google_engine.py  openai_engine.py
src/examples/: __init__.py  azure_example.py  azure_translator_example.py  openai_translator_example.py  usage_examples.py
src/models/: __init__.py  data_classes.py  enums.py
src/processors/: __init__.py  base.py  docx_processor.py  pdf_processor.py  pptx_processor.py  txt_processor.py  xlsx_processor.py
src/translate/: __init__.py  azure_translator.py  azure_translator_old.py  base.py  google_base.py  openai_translator.py
src/ui/: gradio_app.py  streamlit_app.py
src/utils/: __init__.py  config.py  logging.py  logging_config.py  monitoring.py
translation_agent/core/: agent.py  chatbot.py  dictionary_manager.py  translation_engine.py
translation_agent/engines/: __init__.py  anthropic_engine.py  openai_engine.py
translation_agent/models/: enums.py
translation_agent/processors/: base.py  docx_processor.py  txt_processor.py  xlsx_processor.py
translation_agent/translate/: base.py
translation_agent/utils/: config.py  monitoring.py
(+10 files in other folders)
